# ComfyUI-Kimi-VL

./: README.md  __init__.py  nodes.py  pyproject.toml
src/: LICENSE  inference_instruct.py  inference_thinking.py
